[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
enum-kinds = "0.5.1"
lox_derive_ast = {path = "./lox_derive_ast"}
log = "0.4.21"
